--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,74 @@
 amqp==5.0.6
+appdirs==1.4.4
 asgiref==3.4.1
+async-generator==1.10
+attrs==21.2.0
 beautifulsoup4==4.10.0
 billiard==3.6.4.0
 bs4==0.0.1
 celery==5.2.1
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.7
 click==8.0.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==36.0.1
+cssselect==1.1.0
 Deprecated==1.2.13
-Django==4.0
+Django==3.2
 django-celery-beat==2.2.1
 django-celery-results==2.2.0
 django-filter==21.1
 django-timezone-field==4.2.1
 djangorestframework==3.12.4
+drf-yasg==1.20.0
+fake-useragent==0.1.11
+h11==0.12.0
 idna==3.3
+importlib-metadata==4.10.0
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.0.3
 kombu==5.2.2
+lxml==4.7.1
+MarkupSafe==2.0.1
+outcome==1.1.0
+packaging==21.3
+parse==1.19.0
 prompt-toolkit==3.0.23
+psycopg2-binary==2.9.2
+pycparser==2.21
+pyee==8.2.2
+pyOpenSSL==21.0.0
+pyparsing==3.0.6
+pyppeteer==0.2.6
+pyquery==1.4.3
 python-crontab==2.6.0
 python-dateutil==2.8.2
 pytz==2021.3
 redis==3.5.3
 requests==2.26.0
+requests-html==0.10.0
+ruamel.yaml==0.17.17
+selenium==4.1.0
 six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
 soupsieve==2.3.1
 sqlparse==0.4.2
+tqdm==4.62.3
+trio==0.19.0
+trio-websocket==0.9.2
+uritemplate==4.1.1
 urllib3==1.26.7
 vine==5.0.0
+w3lib==1.22.0
 wcwidth==0.2.5
+websockets==9.1
 wrapt==1.13.3
+wsproto==1.0.0
+zipp==3.6.0
